--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,10 @@ input[type='checkbox'] {
     height: 25px;
     accent-color: red;
 }
-
+.Points{
+    width: 90px;
+    height: 30px;
+}
 /* Dropdown Button */
 .dropbtn {
     background-color: red;
@@ -88,7 +91,7 @@ input[type='checkbox'] {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 220px;
+    min-width: 230px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
